--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
     branches: [master]
   push:
     branches: [master]
-  schedule: [cron: "12 */24 * * *"]
+  schedule: [ cron: "*/15 * * * *" ]
 
 jobs:
   build-and-simulate:
